manifests/002-hashistack-system.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: consul-system
