manifests/002-nomad-system.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nomad-system
