manifests/021-vault.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault-system
