manifests/003-nomad-server.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nomad-server-route
  namespace: kube-system
spec:
  entryPoints:
  - websecure
  routes:
  - match: 'Host(`nomad.docker.localhost`)'
    kind: Rule
    services:
    - kind: Service
      name: nomad-server
      namespace: nomad-system
      scheme: https
      serversTransport: nomad-server
      port: 4646
