manifests/012-argocd.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-route
  namespace: kube-system
spec:
  entryPoints:
  - websecure
  routes:
  - match: 'Host(`argocd.docker.localhost`)'
    kind: Rule
    priority: 10
    services:
    - kind: Service
      name: argocd-server
      namespace: argocd-system
      port: 80
  - match: 'Host(`argocd.docker.localhost`) && Headers(`Content-Type`, `application/grpc`)'
    kind: Rule
    priority: 11
    services:
    - kind: Service
      name: argocd-server
      namespace: argocd-system
      port: 80
      scheme: h2c
  tls:
    secretName: argocd.docker.localhost
